2007-04-01 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* testSQLite.m:
	* testJDBC.m:
	* MySQL.m:
	* Postgres.m:
	* GNUmakefile:
	* SQLite.m:
	* JDBC.m:
	* testMySQL.m:
	* testPostgres.m:
	* testECPG.m:
	Updates to build on MacOS-X with apple-apple-appple

2007-03-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* MySQL.m:
	* ECPG.pgm:
	* Postgres.m:
	* Oracle.pm:
	* SQLite.m:
	* JDBC.m:
	Add KVC support for SQLRecord.  Make SQLRecord into a class cluster
	with a single concrete implementation for now.  Extend API to allow
	specifying of an alternative SQLRecord subclass when doing a query
	so that query results can be efficiently stored into custom subclasses
	rather than having to first be retrieved into an SQLRecord and then
	copied.

2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile (BUNDLE_INSTALL_DIR): Set using GNUSTEP_BUNDLES,
	not GNUSTEP_INSTALLATION_DIR.

2007-01-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC.m: Add JDBC2.0 batching for when all statements in a
	transaction are simple (ie no NSData arguments) and the batch
	API is supported by the driver.
	* testJDBC.m: Add simple transaction/batch test.

2007-01-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC.m: Add support for SQLTransaction class to batch JDBC
	operations.

2006-12-24 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC.m: Don't store pointer to jni information in local variable
	until after we have opened the connection to the database, or we
	may be using a null pointer and generate a crash.

2006-12-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: save/restore LIBS after jdbc check so that other
	tests don't try to link jre

2006-10-06 Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile.wrapper.objc.preamble (ADDITIONAL_LIB_DIRS): Added 
	variable so that the wrapper compiles before the library is installed.

2006-10-02 Nicola Pero <nicola.pero@meta-innovation.com>
