@@ -1,3 +1,8 @@
+2007-07-07 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* SQLClient.m: Fix error causing loss of some debug output when an
+	exception occurs in a transaction.
+
 2007-04-01 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* SQLClient.h:
